K8serverzip/mvn.yml
apiVersion: v1
kind: Service
metadata:
  name: maven
  namespace: maven
spec:
  type: NodePort
  selector:
    app: maven
  ports:
    -  port: 80
       targetPort: 8080
