K8serverzip/privaterepodeployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploymentrollingupdate
spec:
  replicas: 3
  selector:
    matchLabels:
      app: javawebapppod
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  minReadySeconds: 30
  template:
    metadata:
      labels:
        app: javawebapppod       
    spec:
      imagePullSecrets:
        - name: dockerregcred
      containers:
      - name: java-container
        image: ashoknagari/javawebapp:9
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 500m
            memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: javaservice
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: javawebapppod
