K8serverzip/replicaforautoscaler.yml
apiVersion: v1
kind: Service
metadata:
  name: springsvc
spec:
  type: NodePort
  selector:
    app: springapp
  ports:
    - port: 80
      targetPort: 8080
